img-src updated

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <div class="card">
-                  <img src="img/up-48.png" class="img-left" />
+                  <img src="https://github.com/kadir4530/cinance/blob/main/img/up-48.png?raw=true" class="img-left" />
                   <h2>BNB / USDT</h2>
                   <label class="card-label price change-green">
                     <strong>52.061</strong>
@@ -288,12 +288,12 @@
                     <h3 class="change-green">+2.03%</h3>
                     24h Volume <label class="change-red">$10,212,213</label>
                   </label>
-                  <img src="img/up-48.png" class="img-right" />
+                  <img src="https://github.com/kadir4530/cinance/blob/main/img/up-48.png?raw=true" class="img-right" />
                 </div>
               </div>
               <div class="carousel-item">
                 <div class="card">
-                  <img src="img/up-48.png" class="img-left" />
+                  <img src="https://github.com/kadir4530/cinance/blob/main/img/up-48.png?raw=true" class="img-left" />
 
                   <h2>BTC / USDT</h2>
                   <label class="card-label price change-green">
@@ -304,12 +304,12 @@
                     <h3 class="change-green">+4.03%</h3>
                     24h Volume <label class="change-red">$213,021,118</label>
                   </label>
-                  <img src="img/up-48.png" class="img-right" />
+                  <img src="https://github.com/kadir4530/cinance/blob/main/img/up-48.png?raw=true" class="img-right" />
                 </div>
               </div>
               <div class="carousel-item">
                 <div class="card">
-                  <img src="img/up-48.png" class="img-left" />
+                  <img src="https://github.com/kadir4530/cinance/blob/main/img/up-48.png?raw=true" class="img-left" />
 
                   <h2>ETH / USDT</h2>
                   <label class="card-label price change-green">
@@ -320,7 +320,7 @@
                     <h3 class="change-green">+7.03%</h3>
                     24h Volume <label class="change-red">$28,002,912</label>
                   </label>
-                  <img src="img/up-48.png" class="img-right" />
+                  <img src="https://github.com/kadir4530/cinance/blob/main/img/up-48.png?raw=true" class="img-right" />
                 </div>
               </div>
             </div>
